--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98985\uFF1A\u66FF\u6362\u7A7A\u683C.py=utf-8
+encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98986\uFF1A\u4ECE\u5C3E\u5230\u5934\u6253\u5370\u94FE\u8868.py=utf-8
