--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,5 @@ eclipse.preferences.version=1
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98985\uFF1A\u66FF\u6362\u7A7A\u683C.py=utf-8
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98986\uFF1A\u4ECE\u5C3E\u5230\u5934\u6253\u5370\u94FE\u8868.py=utf-8
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98987\uFF1A\u91CD\u5EFA\u4E8C\u53C9\u6811.py=utf-8
+encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98988\uFF1A\u4E8C\u53C9\u6811\u7684\u4E0B\u4E00\u4E2A\u8282\u70B9.py=utf-8
+encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u98989\uFF1A\u7528\u4E24\u4E2A\u6808\u5B9E\u73B0\u961F\u5217.py=utf-8
