面试题19：正则表达式匹配

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u989810\uFF1A\u6590\u6CE2\u90A3\u5951\u6570\u5217.py=utf-8
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u989812\uFF1A\u77E9\u9635\u4E2D\u7684\u8DEF\u5F84.py=utf-8
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u989815\uFF1A2\u7684\u6574\u6570\u6B21\u65B9.py=utf-8
 encoding//CodingInterviewChinese2_Python/\u9762\u8BD5\u989815\uFF1A\u4E8C\u8FDB\u5236\u4E2D1\u7684\u4E2A\u6570.py=utf-8
